--- a/build.gradle
+++ b/build.gradle
@@ -1,93 +1,111 @@
-group 'co.brightcog'
-version '1.0-SNAPSHOT'
 
 buildscript {
-    ext.kotlin_version = '1.2.20'
-    ext.arrow_version = '0.6.1'
-    ext.dynamodb_version = '1.11.284'
-    ext.coroutinesVersion = '0.16'
-    ext.kotlinTestVersion = '2.0.7'
+    ext {
+        // Constants
+        gradleVersion = '4.2'
+        gradleVersionsPluginVersion = '0.17.0'
+        kotlinTestVersion = '2.0.7'
+        kotlinVersion = '1.2.20'
+        kotlinxCoroutinesVersion = '0.20'
+        kotlinxCollectionsImmutableVersion = '0.1'
+        arrowVersion = '0.7.1'
+//        arrowVersion = '0.7.0'
+        javaVersion = JavaVersion.VERSION_1_8
+        dynamodb_version = '1.11.284'
+    }
 
     repositories {
-        mavenCentral()
+        jcenter()
+        maven { url 'https://jitpack.io' }
+        maven { url "http://dl.bintray.com/kotlin/kotlin-dev" }
+        maven { url "https://dl.bintray.com/jetbrains/markdown/" }
+        maven { url "https://dl.bintray.com/arrow-kt/arrow-kt/" }
+        maven { url "https://plugins.gradle.org/m2/" }
     }
+
     dependencies {
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "com.github.ben-manes:gradle-versions-plugin:$gradleVersionsPluginVersion"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.0'
+        classpath 'io.arrow-kt:ank-gradle-plugin:0.5.1'
+        classpath 'org.ajoberstar:gradle-git-publish:0.3.2'
     }
 }
 
-repositories {
-    mavenCentral()
-    jcenter()
-    maven { url "http://dl.bintray.com/kategory/maven" }
-    maven { url 'https://maven.google.com' }
-    maven { url 'https://kotlin.bintray.com/kotlinx' }
-    maven { url "http://dl.bintray.com/kotlin/kotlin-dev" }
-    maven { url "http://dynamodb-local.s3-website-us-west-2.amazonaws.com/release" }
-}
+subprojects { project ->
 
+    group = GROUP
+    version = VERSION_NAME
 
-
-apply plugin: 'kotlin'
-apply plugin: 'kotlin-kapt' 
-apply from: rootProject.file('gradle/generated-kotlin-sources.gradle')
-
-dependencies {
-    compile "io.arrow-kt:arrow-core:$arrow_version"
-    compile "io.arrow-kt:arrow-typeclasses:$arrow_version"
-    compile "io.arrow-kt:arrow-instances:$arrow_version"
-    compile "io.arrow-kt:arrow-syntax:$arrow_version"
-    kapt    "io.arrow-kt:arrow-annotations-processor:$arrow_version"
-
-    compile "io.arrow-kt:arrow-free:$arrow_version"
-    compile "io.arrow-kt:arrow-mtl:$arrow_version"
-    compile "io.arrow-kt:arrow-effects:$arrow_version"
-    compile "io.arrow-kt:arrow-effects-rx2:$arrow_version"
-    compile "io.arrow-kt:arrow-effects-kotlinx-coroutines:$arrow_version"
-    compile "io.arrow-kt:arrow-optics:$arrow_version"
-
-    compile "io.arrow-kt:arrow-core:$arrow_version:sources"
-    compile "io.arrow-kt:arrow-typeclasses:$arrow_version:sources"
-    compile "io.arrow-kt:arrow-instances:$arrow_version:sources"
-    compile "io.arrow-kt:arrow-syntax:$arrow_version:sources"
-
-    compile "io.arrow-kt:arrow-free:$arrow_version:sources"
-    compile "io.arrow-kt:arrow-mtl:$arrow_version:sources"
-    compile "io.arrow-kt:arrow-effects:$arrow_version:sources"
-    compile "io.arrow-kt:arrow-effects-rx2:$arrow_version:sources"
-    compile "io.arrow-kt:arrow-effects-kotlinx-coroutines:$arrow_version:sources"
-
-    //kotlin test!!!
-
-    testCompile "io.kotlintest:kotlintest:$kotlinTestVersion"
-    testCompile "com.amazonaws:DynamoDBLocal', version: 1.11.0
-
-    compile "com.amazonaws:aws-java-sdk-dynamodb:$dynamodb_version"
-
-}
-
-compileKotlin {
-    kotlinOptions.jvmTarget = "1.8"
-}
-compileTestKotlin {
-    kotlinOptions.jvmTarget = "1.8"
-}
-kotlin {
-    experimental {
-        coroutines "enable"
+    repositories {
+        jcenter()
+        mavenCentral()
+        maven { url 'https://kotlin.bintray.com/kotlinx' }
+        maven { url "http://dl.bintray.com/kotlin/kotlin-dev" }
+        maven { url "http://dl.bintray.com/arrow-kt/arrow-kt" }
+        maven { url "https://dl.bintray.com/jetbrains/markdown/" }
+        maven { url 'https://jitpack.io' }
+        maven { url 'https://oss.jfrog.org/artifactory/oss-snapshot-local' }
     }
-}
 
-task copyNativeDeps(type: Copy) {
-    from (configurations.testCompile) {
-        include "*.dylib"
-        include "*.so"
-        include "*.dll"
+    apply plugin: 'kotlin'
+    apply plugin: 'jacoco'
+
+
+    archivesBaseName = POM_ARTIFACT_ID
+
+    jacoco {
+        toolVersion '0.7.8'
     }
-    into 'build/libs'
+
+    task codeCoverageReport(type: JacocoReport) {
+        reports {
+            xml.enabled true
+            xml.destination file("${buildDir}/reports/jacoco/report.xml")
+            html.enabled true
+            csv.enabled false
+        }
+
+        classDirectories = fileTree(
+                dir: 'build/classes/main/helios',
+        )
+
+        sourceDirectories = files('src/main/kotlin')
+        executionData fileTree(project.rootDir.absolutePath).include("**/build/jacoco/*.exec")
+    }
+
+    apply plugin: 'com.jfrog.bintray'
+
+/*    bintray {
+        publish = true
+        user = project.hasProperty('bintrayUser') ? project.property('bintrayUser') : System.getenv('BINTRAY_USER')
+        key = project.hasProperty('bintrayApiKey') ? project.property('bintrayApiKey') : System.getenv('BINTRAY_API_KEY')
+        configurations = ['archives']
+        pkg {
+            repo = 'maven'
+            name = project.name
+            userOrg = POM_DEVELOPER_ID
+            licenses = ['Apache-2.0']
+            vcsUrl = 'https://github.com/arrow-kt/arrow.git'
+        }
+    }*/
+
+    compileKotlin.kotlinOptions.freeCompilerArgs += ["-Xskip-runtime-version-check"]
+
+    test {
+        testLogging {
+            events "passed", "skipped", "failed", "standardOut", "standardError"
+        }
+    }
+
+//    build.dependsOn ':detekt'
+
+    sourceCompatibility = javaVersion
+    targetCompatibility = javaVersion
 }
 
-test.dependsOn copyNativeDeps
-test.doFirst {
-    systemProperty "java.library.path", 'build/libs'
+task wrapper(type: Wrapper) {
+    distributionUrl = "https://services.gradle.org/distributions/gradle-${gradleVersion}-all.zip"
 }
+
+apply plugin: 'com.github.ben-manes.versions'
